@@ -24,12 +24,12 @@ public class FileLoader {
         final String fileName = String.format("sql/%s_%s.sql", scriptName, dbType);
         try (InputStream stream = Thread.currentThread().getContextClassLoader().getResourceAsStream(fileName)) {
             if (stream == null) {
-                throw new IllegalStateException(String.format("Impossible to find %s", fileName);
+                throw new IllegalStateException(String.format("Impossible to find %s", fileName));
             }
             byte[] buffer = new byte[stream.available()];
             stream.read(buffer);
             String[] statements = new String(buffer).split(";");
-            return Arrays.asList(statements);
+            return List.of(statements);
         } catch (Exception e) {
             throw new RuntimeException(String.format("Error reading query script file %s", fileName), e);
         }
